添加打包为exe的方法